--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>fontbox</artifactId>
             <version>2.0.29</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc</artifactId>
+            <version>21.11.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
