--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc</artifactId>
+            <artifactId>ojdbc8</artifactId>
             <version>21.11.0.0</version>
         </dependency>
         <dependency>
