--- a/pom.xml
+++ b/pom.xml
@@ -38,17 +38,17 @@
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
-            <version>21.11.0.0</version>
+            <version>23.4.0.24.05</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ucp</artifactId>
-            <version>21.11.0.0</version>
+            <version>23.4.0.24.05</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.database.ha</groupId>
             <artifactId>ons</artifactId>
-            <version>21.11.0.0</version>
+            <version>23.4.0.24.05</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -59,6 +59,11 @@
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bgee.log4jdbc-log4j2</groupId>
+            <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+            <version>1.16</version>
         </dependency>
     </dependencies>
 
